<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ramdhany.ari.alamsariresto.DineInActivity">

    <TextView
        android:id="@+id/idDetailCust"
        android:text="@string/detail_customer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:fontFamily="sans-serif-smallcaps"
        android:textAlignment="center"
        android:textSize="24sp"
        tools:ignore="UnusedAttribute" />
    <EditText
        android:hint="@string/hintName"
        android:fontFamily="sans-serif-smallcaps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idDetailCust"
        android:layout_marginTop="15dp"
        android:layout_marginRight="70dp"
        android:layout_marginLeft="70dp"
        tools:ignore="UnusedAttribute"
        android:id="@+id/editText2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:layout_marginTop="26dp"
        android:layout_toLeftOf="@+id/idbtnOrdr"
        android:layout_toStartOf="@+id/idbtnOrdr"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/no_meja"
        android:textSize="16sp"
        tools:ignore="UnusedAttribute" />

    <Spinner
        android:id="@+id/label_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView2"
        android:layout_centerHorizontal="true">
    </Spinner>

    <Button
        android:id="@+id/idbtnOrdr"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        android:onClick="ShowOrder"
        android:text="@string/choose_order" />

</RelativeLayout>
